UI Updates - markdown editor

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <!-- build:csszz -->
-    <link rel="stylesheet" type="text/css" href="./styles/main-3ad65abde6.css">
+    <link rel="stylesheet" type="text/css" href="./styles/main-d6fe3528fb.css">
 <!-- endbuild -->
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwh5EZxwhCELJDukSBmPARd0X6-fcF2hM"></script>
@@ -25,6 +25,9 @@
 <body ng-app="kbyteApp">
 
     <main role="main" id="main" ng-cloak class="ng-cloak">
+        <div id="background-main">
+            <img src="./images/kbyte-background-main.gif" alt="background image" class="stretch"/>
+        </div>
         <div ng-include="'views/navbar.html'"></div>
         <div id="content">
             <div ui-view>
